# Billy

./: .gitignore  README.md  index.html  package-lock.json  package.json
migrations/: 001_create_invoices.sql  002_create_overrides_and_settings.sql  003_create_processing_logs_table.sql
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: dashboard.rs  invoices.rs  mod.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: crypto.rs  mod.rs  openai.rs  processor.rs  state.rs  text_extraction.rs  watcher.rs
src-tauri/src/utils/: mod.rs
