[package]
name = "billly-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
keyring = "2.1"
ring = "0.17"
base64 = "0.21"
notify = "6.1"
walkdir = "2.5"
tesseract = "0.13"
pdf-extract = "0.7"
jsonschema = "0.17"
open = "5.3"
rfd = "0.16"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[[bin]]
name = "billly"
path = "src/main.rs"

[profile.release]
opt-level = 3
